<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_bottom_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/bottom_nav_home" />

    <item
        android:id="@+id/nav_bottom_quick_message"
        android:icon="@drawable/ic_nav_message"
        android:title="@string/bottom_nav_message" />

    <item
        android:id="@+id/nav_bottom_room"
        android:icon="@drawable/ic_nav_room"
        android:title="@string/bottom_nav_room" />

    <item
        android:id="@+id/nav_bottom_friends"
        android:icon="@drawable/ic_ios_contacts"
        android:title="@string/bottom_nav_friends" />

    <item
        android:id="@+id/nav_bottom_profile"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/bottom_nav_profile" />
</menu>
